Correction suite a relecture globale

--- a/manuscrit_G_LEFEBVRE/annexe_structure_code.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_structure_code.tex
@@ -2,7 +2,7 @@
 \pagestyle{main}
 
 \begin{document}
-\chapter{Structuration du code de calcul. \label{chap:structure_code} }
+\chapter{Structuration du code de calcul \label{chap:structure_code} }
 \mylettrine{D}{e} nombreux codes de calculs ont été développés durant la thèse. Outre le début de la thèse qui s'est déroulé sous Scilab dans le but de maquetter rapidement le code résolvants les différents modèles EDP, plusieurs codes ont été développées dans différents langages. 
 Sans tomber dans la présentation détaillée de l'ensemble des codes développés pendant ma thèse, faisons en un tour d'horizon. Ma thèse étant divisée en deux grandes parties, deux codes ont été développé. Le premier pour résoudre le modèle EDP, et fournir des simulations numériques reproduisant des croissances tumorales et des résistances aux traitements. Le second, pour calculer un critère d'\hetero à partir d'une image, que ce soit une image provenant directement de l'appareil d'imagerie médicale ou une image provenant de la simulation numérique.  
 
