--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -448,3 +448,44 @@ note ={\url{http://gfme.free.fr/connaissances/angiogenese.html}},
 title = {L'angiogenèse des tumeurs cérébrales malignes},
 urldate = {20/07/2015}
 }
+
+@article{choi2008response,
+  title={Response evaluation of gastrointestinal stromal tumors},
+  author={Choi, Haesun},
+  journal={The oncologist},
+  volume={13},
+  number={Supplement 2},
+  pages={4--7},
+  year={2008},
+  publisher={AlphaMed Press}
+}
+
+@article{benjamin2007we,
+  title={We should desist using RECIST, at least in GIST},
+  author={Benjamin, Robert S and Choi, Haesun and Macapinlac, Homer A and Burgess, Michael A and Patel, Shreyaskumar R and Chen, Lei L and Podoloff, Donald A and Charnsangavej, Chuslip},
+  journal={Journal of Clinical Oncology},
+  volume={25},
+  number={13},
+  pages={1760--1764},
+  year={2007},
+  publisher={American Society of Clinical Oncology}
+}
+
+@book{leveque2007finite,
+  title={Finite difference methods for ordinary and partial differential equations: steady-state and time-dependent problems},
+  author={LeVeque, Randall J},
+  volume={98},
+  year={2007},
+  publisher={Siam}
+}
+
+@article{latige2013second,
+  title={A second order Cartesian finite volume method for elliptic interface and embedded Dirichlet problems},
+  author={Latige, Manuel and Colin, T and Gallice, G},
+  journal={Computers \& Fluids},
+  volume={83},
+  pages={70--76},
+  year={2013},
+  publisher={Elsevier}
+}
+
