--- a/manuscrit_G_LEFEBVRE/chap_trefle.tex
+++ b/manuscrit_G_LEFEBVRE/chap_trefle.tex
@@ -11,19 +11,19 @@
 %
 %\mylettrine{T}{ransporter} (ou diffuser) une quantité invariante par rotation n'est pas chose facile. Pour illustrer cela, nous allons montrer dans un premier temps les résultats obtenus, lorsqu'on discrétise le modèle présenté au chapitre précédent avec des schémas classiques.  Nous examinerons ensuite les diverses sources causant
 
-\mylettrine{C}{onsidérons} le modèle que nous avons construit au chapitre précédent avec pour donnée initiale des densités invariantes par rotation. Le champ de vitesses (dont la divergence est  donnée par ces mêmes densités, \cf Eq.~EQREF) est donc invariant par rotation. Ainsi pour tout temps nos densités devraient être invariantes par rotation. Sauf que sur maillage cartésien, avec les schémas numériques classiques, cette propriété n'est pas du tout conservée au fil du temps... Comme nous allons le présenter au début de ce chapitre, les lignes de niveaux, au départ circulaires, vont peu à peu se déformer devenant progressivement carrées puis prenant plus tard la forme d'un trèfle à 4 feuilles !... Deux pistes seront alors étudiées~:
+\mylettrine{C}{onsidérons} le modèle que nous avons construit au chapitre précédent avec pour donnée initiale des densités invariantes par rotation. Le champ de vitesses (dont la divergence est  donnée par ces mêmes densités, \cf Eq.~\eqref{eq_darcy}) est donc invariant par rotation. Ainsi pour tout temps nos densités devraient être invariantes par rotation. Sauf que sur maillage cartésien, avec les schémas numériques classiques, pour certains jeux de paramètres,  cette propriété n'est pas du tout conservée au fil du temps... Comme nous allons le présenter au début de ce chapitre, les lignes de niveaux, au départ circulaires, vont peu à peu se déformer devenant progressivement carrées puis prenant plus tard la forme d'un trèfle à 4 feuilles !... Deux pistes seront alors étudiées~:
 \begin{myitemize}
 \item défaut du schéma de diffusion
 \item défaut du schéma de transport
 \end{myitemize}
 
 
-\noindent Une fois le défaut identifié, un correctif sera finalement proposé. 
+\noindent Une fois le défaut identifié, un correctif sera finalement proposé~: le schéma \twinweno. 
 
 \section{Présentation du problème}
 Sans plus tarder, présentons le problème en image. Sur la Figure~\ref{fig:trefle}, est présenté une simulation numérique du modèle EDP construit au chapitre précédent avec~:
 \begin{myitemize}
-\item un schéma à 5 points classique pour la diffusion,
+\item un schéma classique à 5 points pour la diffusion,
 \item un WENO5 (avec splitting directionnel) pour le transport.
 \end{myitemize}
 \begin{figure}
@@ -60,7 +60,7 @@ Le schéma associé à la diffusion a été le premier à être incriminé. En e
 \end{aligned}
 \right.
 \end{equation}
-qui n'est autre que l'équation résolue lors de la première itération de l'algorithme sur le modèle complet ($M$ étant initialisé au dessus du seuil d'hypoxie, on a alors au départ $\gammapp=1$ dans l'équation REF. De plus, comme $N=0$ au départ, on obtient alors $\dive \vit = P$, car $k\equiv1$). Dans les itérations suivantes certes le second membre de l'équation va varier, mais cela ne va pas changer le fait que la forme du bord impacte sur les lignes de niveaux.
+qui n'est autre que l'équation résolue lors de la première itération de l'algorithme sur le modèle complet ($M$ étant initialisé au dessus du seuil d'hypoxie, on a alors au départ $\gammapp=1$ dans l'équation~\eqref{eq_darcy}. De plus, comme $N=0$ au départ, on obtient alors $\dive \vit = P$, car $k\equiv1$). Dans les itérations suivantes certes le second membre de l'équation va varier, mais cela ne va pas changer le fait que la forme du bord impacte sur les lignes de niveaux.
 \begin{figure}
 \centering
 \subfloat[Sans masque\label{fig:ligne_nvx_laplace_carre} ]{
@@ -75,7 +75,10 @@ qui n'est autre que l'équation résolue lors de la première itération de l'al
 \caption{\label{fig:ligne_nvx_laplace} Résolution de la pression donnée par un laplacien. La forme du domaine de calcul carré impacte sur le résultat.}
 \end{figure}
 
-L'effet carré sur les lignes de niveaux de la pression, apparaît surtout près du bord du domaine de calcul. Ainsi, pour tenter de palier à ce défaut, la première idée fut de considérer un domaine plus grand, laissant une sorte de couche limite pour absorber les déformations. Des simulations numériques de notre modèle ont été réalisées en doublant la longueur dans chaque direction (la taille d'une maille restant inchangée, on double aussi le nombre de mailles). Malheureusement, une forme de trèfle est toujours visible. On a même du mal à distinguer visuellement s'il y a eu une amélioration. Visiblement cette couche limite ne suffit pas. La seconde idée, fut donc d'imposer la CL sur un cercle, de sorte à ce que celle-ci soit invariante par rotation. Considérons alors un disque~$\mathcal{D}$ (un masque) inclus dans notre domaine de calcul initial~$\Omega$ et imposons la CL de Dirichlet sur son bord. L'équation~\eqref{eq_pression_disc} sur la pression devient alors~: 
+L'effet carré sur les lignes de niveaux de la pression, apparaît surtout près du bord du domaine de calcul. Ainsi, pour tenter de palier à ce défaut, la première idée fut de considérer un domaine plus grand, laissant une sorte de couche limite pour absorber les déformations. Des simulations numériques de notre modèle ont été réalisées en doublant la longueur dans chaque direction (la taille d'une maille restant inchangée, on double aussi le nombre de mailles). Malheureusement, une forme de trèfle est toujours visible. On a même du mal à distinguer visuellement s'il y a eu une amélioration. 
+%Visiblement cette 
+Cette couche limite ne suffit donc pas. 
+La seconde idée, fut d'imposer la CL sur un cercle, de sorte à ce que celle-ci soit invariante par rotation. Considérons alors un disque~$\mathcal{D}$ (un masque) inclus dans notre domaine de calcul initial~$\Omega$ et imposons la CL de Dirichlet sur son bord. L'équation~\eqref{eq_pression_disc} sur la pression devient alors~: 
 \begin{equation}\label{eq:pression_iter1_mask}
 \left\{
 \begin{aligned}
@@ -85,11 +88,13 @@ L'effet carré sur les lignes de niveaux de la pression, apparaît surtout près
 \right. \quad \forall t>0
 \end{equation}
 Pour résoudre cela on procède par pénalisation de tout ce qui est à l'extérieur du disque~:
-\begin{equation}
+\begin{equation}\label{eq:pression_masque_penalisation}
 - \Delta \Pi(t,\vecx) = F(t,\vecx) + \frac{1}{\epsilon} \Pi \mathds{1}_{\mathcal{D}^c}(\vecx),
 \end{equation}
-où $\mathcal{D}^c$ désigne le complémentaire de $\mathcal{D}$. Ainsi, le domaine de calcul reste~$\Omega$ entier, mais en dehors de~$\mathcal{D}$, la pénalisation impose~$\Pi=0$. Cette technique nous garantit ainsi l'invariance par rotation de~$\Pi$ si le terme source~$F$ l'est. 
-Comme on peut le voir sur la Figure~\ref{fig:ligne_nvx_laplace_mask}, l'utilisation d'un masque permet bien d'assurer la préservation de l'invariance par rotation sur la pression. Malheureusement, les simulations numériques réalisées avec ce masque circulaire ne montrent qu'une très légère amélioration \todo{Montrer graphique?} de la forme~: le trèfle persiste. 
+où $\mathcal{D}^c$ désigne le complémentaire de $\mathcal{D}$ et où $\epsilon$ est un paramètre de pénalisation (que l'on prend petit~: $10^-5$). Ainsi, le domaine de calcul reste~$\Omega$ entier, mais en dehors de~$\mathcal{D}$, la pénalisation impose\footnote{En multipliant l'équation~\eqref{eq:pression_masque_penalisation} par $\epsilon$ puis en faisant tendre $\epsilon$ vers 0, on obtient alors que la pénalisation impose $\Pi \mathds{1}_{\mathcal{D}^c}(\vecx)=0.$}~$\Pi=0$. Cette technique nous garantit ainsi l'invariance par rotation de~$\Pi$ si le terme source~$F$ l'est. 
+Comme on peut le voir sur la Figure~\ref{fig:ligne_nvx_laplace_mask}, l'utilisation d'un masque permet bien d'assurer la préservation de l'invariance par rotation sur la pression. Malheureusement, les simulations numériques réalisées avec ce masque circulaire ne montrent qu'une très légère amélioration 
+%\todo{Montrer graphique?} 
+de la forme~: le trèfle persiste. 
 Explorons alors une autre piste. 
 
 \subsection{Schéma à 9 points}
@@ -101,7 +106,7 @@ La forme du trèfle fait très clairement apparaître les directions du maillage
 \resizebox{.49\textwidth}{!}{\input{tex_pictures/stencil_9pts_custom.tex}}}
 \caption{\label{fig:schema_laplacien}Poids associés à chacun des points du stencil à 9 points de schémas discrétisant le laplacien ($h$ étant le pas d'espace, égal dans chaque direction).}
 \end{figure}
-Le premier schéma à 9 points essayé est le schéma classique, présenté notamment ???\todo{bib ref}, ayant des poids comme indiqué sur la Figure~\ref{fig:schema_laplace_9pts_classique}. Aucune amélioration n'a malheureusement été constatée ... Un second schéma à 9 points a été imaginé à partir d'une méthode mixte éléments finis/volumes finis. Le principe est le suivant.  
+Le premier schéma à 9 points essayé est le schéma classique, présenté notamment dans~\cite{leveque2007finite}, ayant des poids comme indiqué sur la Figure~\ref{fig:schema_laplace_9pts_classique}. Aucune amélioration n'a malheureusement été constatée... Un second schéma à 9 points a été imaginé à partir d'une méthode mixte éléments finis/volumes finis comme présentée et utilisée dans~\cite{latige2013second}. Le principe est le suivant.  
 %%%% Figure basculées en annexe
 Sur chaque maille~$\mathcal{M}$, une approximation par un polynôme~$\mathbb{Q}1$ est réalisée à partir des valeurs aux quatre coins de la maille. Le flux au travers du volume de contrôle est alors calculé comme l'intégrale sur le bord de ce volume, de la dérivée du polynôme. Les détails concernant cette méthode sont présentés en  annexe~\ref{chap:anx_methode_mixte_VFEF}. Il y est notamment montré que ce schéma mixte se ramène en réalité à un schéma à 9 points avec des poids un peu différents, comme présenté dans la Figure~\ref{fig:schema_laplace_9pts_custom}. 
 Ici encore le trèfle persiste. Tout ceci nous amène à penser que le schéma de diffusion n'est pas le responsable de cette instabilité numérique qui génère le trèfle. Regardons maintenant de plus près le schéma de transport. 
@@ -123,11 +128,12 @@ Le modèle complet en est alors réduit à~:
 \vit &= -\nabla \Pi
 \end{aligned} \right.
 \end{equation}
-Notez qu'en injectant la seconde égalité dans la première équation, on obtient~:
+Si maintenant, on se donne un champ de vitesse $\vit$, alors en injectant la seconde égalité dans la première équation, le système se réduit à une seule équation~:
 \begin{equation}\label{eq:mod_reduit_test_transp}
 \partial_t P + \vit \nabla P = -P^2
 \end{equation}
-Pour pouvoir incriminer le schéma de transport, réalisons une dernière simplification~: donnons nous une vitesse. Ainsi seule l'équation~\eqref{eq:mod_reduit_test_transp} ci-dessus suffit. La vitesse est choisie de sorte à reproduire au mieux la vitesse du système complet. Le champ est d'abord dilatant (pour reproduire la croissance lors de la rechute au premier traitement) puis contractant (lorsque le second traitement agit). La transition entre les deux comportements est une phase dans laquelle on a un mélange des deux comportements. 
+%Pour pouvoir incriminer le schéma de transport, réalisons une dernière simplification~: donnons nous une vitesse. Ainsi seule l'équation~\eqref{eq:mod_reduit_test_transp} ci-dessus suffit. 
+La vitesse $\vit$ est choisie de sorte à reproduire au mieux la vitesse du système complet. Le champ est d'abord dilatant (pour reproduire la croissance lors de la rechute au premier traitement) puis contractant (lorsque le second traitement agit). La transition entre les deux comportements est une phase dans laquelle on a un mélange des deux comportements. 
 La Figure~\ref{fig:vx_profile} présente l'un des profils de vitesse de la simulation numérique qui génère le trèfle, simulation que l'on a présentée sur la Figure~\ref{fig:trefle}. 
 Au centre de la tumeur (autour de~$x=5\;cm$), il y a un point de compression~: 
 la vitesse est centripète puisque~$v_x$ est positif à droite et négatif à gauche. 
@@ -144,14 +150,16 @@ De plus, aux alentours de~$1.5\;cm$ du centre de la tumeur, il y a une couronne 
 \end{multicols}
 \end{figure}
 
-La vitesse, que l'on impose dans~\eqref{eq:mod_reduit_test_transp}, est alors choisie comme suit en fonction du rayon~$r(\vecx)=\| \vecx - \vecx_c \|$ uniquement ($\vecx_c$ étant le centre du domaine de calcul de taille $L\times L$)~:
+La vitesse, que l'on impose dans l'équation~\eqref{eq:mod_reduit_test_transp}, est alors choisie comme suit en fonction du rayon~$r(\vecx)=\| \vecx - \vecx_c \|$ uniquement (le point $\vecx_c=(L/2, L/2)$ étant le centre du domaine de calcul
+% de taille $L\times L$
+)~:
 \begin{equation}\label{eq:vit_imposee}
 \vit(t,\vecx)=v\big(t,r(\vecx)\big)\frac{\vecx}{\|\vecx \|} \quad \textrm{avec} \quad v(t,r) = e^{-t} v_+(r) - \frac{t}{T_{\rm end}}v_-(r),
 \end{equation}
 où~$T_{\rm end}$ est le temps final de simulation (ici choisi à 1650 jours)  et où~$v_-$ et~$v_+$ sont respectivement les vitesses contractantes et dilatantes~:
 \begin{align}
 v_-(r)&= 0.4 \exp\left( \frac{-1}{10} \left(\frac{r-L/8}{L/8} \right)^2 \right), \label{eq:v_moins}\\
-v_+(r)&=\exp\left( \frac{-1}{10} \left(\frac{r-L/4}{L/16} \right)^2 \right., \label{eq:v_plus}
+v_+(r)&=\exp\left( \frac{-1}{10} \left(\frac{r-L/4}{L/16} \right)^2 \right), \label{eq:v_plus}
 \end{align}
 Le profil de ces 2 vitesses est présenté à titre indicatif sur la Figure~\ref{fig:vitesse+et-imposees}. 
 
@@ -200,7 +208,7 @@ Nous avons ainsi mis en évidence la responsabilité du schéma de transport dan
 %\subsection{Le \twinweno~: un schéma WENO5 modifié \label{sec:twinweno}}
 
 
-Le schéma WENO5 standard comme donné par~\cite{Liu1994} est précis dans la plupart des cas, cependant, comme nous venons de le voir, certains ensembles de paramètres%\footnote{L'ensemble de paramètre a été trouvé par incident en  fitant l'aire tumorale de \Chen, \cf Section~\ref{section chen}.}
+Le schéma WENO5 standard comme donné par~\cite{Liu1994} est précis dans la plupart des cas, cependant, comme nous venons de le voir, certains ensembles de paramètres %\footnote{L'ensemble de paramètre a été trouvé par incident en  fitant l'aire tumorale de \Chen, \cf Section~\ref{section chen}.}
  produisent des instabilités numériques. De telles instabilités ont aussi été constatées avec un schéma classique upwind. 
 
 Le problème est dû au stencil du WENO5 qui tend à favoriser les directions du maillage lors de changements de direction de la vitesse. 
