--- a/manuscrit_G_LEFEBVRE/mes_macros.tex
+++ b/manuscrit_G_LEFEBVRE/mes_macros.tex
@@ -44,7 +44,7 @@
 %\newcommand{\HH}{~$\mathscr{H}$\xspace}
 %\newcommand{\HHmath}{\mathscr{H}\xspace}
 \newcommand{\HH}{~\ensuremath{\mathscr{H}}\xspace}
-\newcommand{\HHobj}{~$\mathscr{H}_{obj}$\xspace}
+\newcommand{\HHobj}{~\ensuremath{\mathscr{H}_{obj}}\xspace}
 
 \newcommand{\treat}{\mathcal{T}}
 \newcommand{\TI}{{\mathcal T_1}}
