--- a/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
@@ -2,7 +2,7 @@
 \pagestyle{main}
 
 \begin{document}
-\chapter{Exploration de différentes pénalisations sur la fonction coût utilsée pour optimiser les niveaux de gris \label{chap:anx_penalisation} }
+\chapter{Exploration de différentes pénalisations sur la fonction coût utilisée pour optimiser les niveaux de gris \label{chap:anx_penalisation} }
 \chaptermark{Exploration de différentes pénalisations} %%% Titre court pour l'entete
 %\mylettrine{B}{labla}
 
